[package]
name = "rcore-fs-fat32"
version = "0.1.0"
edition = "2021"
authors = ["WangHuiYu <huiyu.w@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcore-fs = { path = "../rcore-fs" }
static_assertions = "1.1"
spin = "0.9"
bitflags = "1.3"
log = "0.4"


